[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
